# uv-python-workflow

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: bumpversion.yaml  ci.yaml
src/: __init__.py  calculator.py
tests/: conftest.py  test_calculator.py
